# serverless-python-requirements

./: .editorconfig  .eslintrc.js  .eslintrc.yml  .gitattributes  .gitignore  .nvmrc  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  appveyor.yml  circle.yml  commitlint.config.js  index.js  package-lock.json  package.json  requirements.py  serve.py  sitecustomize.py  test.1.bats  test.bats  test.js  test.sh  unzip_requirements.py  wsgi.py  zipService.js
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build-and-push-artifact-on-all-branches.yml  integrate.yml  lint.yml  publish.yml  test.yml  validate.yml
example/: .gitignore  package.json  prereq  serverless.yml
example_native_deps/: .gitignore  README.md  handler.py  requirements.txt  serverless.yml
lib/: clean.js  docker.js  exclude.js  excludeRequirementsFolder.js  inject.js  layer.js  link.js  monorepo.js  pip.js  pipenv.js  poetry.js  prereqCmd.js  pyproject.js  shared.js  slim.js  uv.js  zip.js  zipService.js  zipTree.js
pipenv-example/: Pipfile  serverless.yml
test/: requirements.txt  serverless.yml
test-indiv/: serverless.yml
tests/base/: _excluded.yml  _slimPatterns.yml  handler.py  id_ed25519  package.json  requirements-w-git-ssh.txt  requirements-w-hashes.txt  requirements-w-nested.txt  requirements.txt  serverless.yml
tests/base/fn3/: fn3_handler.py
tests/individually/: package.json  serverless.yml
tests/individually/module1/: handler1.py
tests/individually_mixed/: serverless.yml
tests/individually_mixed_runtime/: serverless.yml
tests/install_folder_as_package/: pyproject.toml  serverless.yml
tests/issue-161/: requirements.txt  serverless.yml
tests/layer_nodeploy/: serverless.yml
tests/non-python-runtime/: nodeHandler.js  pythonHandler.py
tests/non_build_pyproject/: package.json  requirements.txt  serverless.yml
tests/non_poetry_pyproject/: .gitignore  package.json  serverless.yml
tests/non_python_runtime/: serverless.yml
tests/pipenv/: Pipfile  _slimPatterns.yml  package.json  serverless.yml
tests/poetry/: _slimPatterns.yml  package.json  pyproject.toml  serverless.yml
tests/poetry_individually/: serverless.yml
tests/poetry_individually/module1/: pyproject.toml
tests/poetry_packages/: pyproject.toml  serverless.yml
tests/pyproject_packages/: pyproject.toml  serverless.yml
tests/pyproject_packages_optional/: pyproject.toml  serverless.yml
tests/scaleway_provider/: package.json  requirements.txt  serverless.yml
tests/uv/: package.json  pyproject.toml  serverless.yml
(+4 files in other folders)
