[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0"

[tool.poetry.group.custom1.dependencies]
bottle = {git = "https://git@github.com/bottlepy/bottle.git", tag = "0.12.25"}

[tool.poetry.group.custom2.dependencies]
boto3 = "1.34.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
