[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0"
bottle = {git = "https://git@github.com/bottlepy/bottle.git", tag = "0.12.16"}
boto3 = "1.29.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
